<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sharelock</string>
    <string name="action_settings">Settings</string>
    <string name="sharelock_logo_text">{sharelock}</string>
    <string name="sharelock_subtitle_text">securely share data</string>
    <string name="secret_input_message">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt.</string>
    <string name="secret_hint">data to share</string>
    <string name="secret_input_tooltip">Need <a href="http://sharelock.ideascale.com/a/dtd/Support-secrets-longer-than-500-characters/146355-33649">more space</a> or <a href="http://sharelock.ideascale.com/a/dtd/Support-securely-sharing-files/146356-33649">file sharing</a>?</string>
    <string name="next_button">next</string>
    <string name="share_tooltip">Need auditing, <a href="http://sharelock.ideascale.com/a/dtd/Support-enterprise-credentials/146358-33649">enterprise credentials</a>, or <a href="http://sharelock.ideascale.com/a/dtd/Support-time-limits/146359-33649">time limits</a>?</string>
    <string name="share_hint">who to share with</string>
    <string name="link_hint">sherlocked data</string>
    <string name="link_in_progress">Encrypting your data…</string>
    <string name="link_generation_failed_title">There was an error</string>
    <string name="link_generation_failed_message">Couldn\'t encrypt your data. Please try again.</string>
    <string name="retry_button">Retry</string>
    <string name="cancel_button">Cancel</string>
    <string name="share_link_chooser_title">Send with</string>
    <string name="new_link_prompt_title">Are you sure you want to encrypt new data?</string>
    <string name="new_link_prompt_message">You\'ll lose your current encrypted data.</string>
    <string name="ok_button">Ok</string>
    <string name="link_in_clipboard_message">Sharelock link copied to clipboard!</string>
    <string name="title_activity_about">About</string>
    <string name="sharelock_about">
        <![CDATA[
        <p>
            The {sharelock} service provides you a simple and secure mechanism to share secrets with people you know. You can share secrets with people you trust in three simple steps:
        </p>
        <p>1. Provide the secret data and the list of people you want to allow access to this data to <b>sharelock.io</b>. The service encrypts and signs this information and sends you back the secure URL, which we call a sharelock.</p>
        <p>2. Send the sharelock to your intended recipients using channels you choose, for example e-mail, Twitter, IRC, or public GitHub pages. The channel does not need to be secure as the sharelock itself is already encrypted.</p>
        <p>3. Your recipient navigates to the sharelock URL and is required to authenticate using Auth0. The sharelock.io service validates the sharelock data had not been modified, decrypts it, and checks if the authentiated recipient is on the list of people you intended to share the secret with. If everything checks out, the recipient receives your secret.</p>
        ]]>
    </string>
    <string name="action_about">About</string>
    <string name="action_new">New Sharelock</string>
    <string name="about_container_title">sharelock.io</string>
    <string name="about_subtitle">about</string>
    <string name="action_privacy">Privacy</string>
    <string name="action_feedback">Feedback</string>
    <string name="privacy_url">https://auth0.com/privacy</string>
    <string name="feedback_url">http://sharelock.ideascale.com</string>
    <string name="paste_from_clipboard_prompt">Paste data from Clipboard?</string>
    <string name="paste_clipboard_action">Paste</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_url_reset_button">Reset</string>
    <string name="settings_sherlock_url_hint">Sharelock URL</string>
    <string name="settings_subtitle">settings</string>
    <string name="settings_url_endpoint_tooltip">By default it uses https://sharelock.io but you can change it to your own instance of sharelock</string>

</resources>
