<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.auth0.sharelock.SettingsActivity"
    >

    <item android:id="@+id/action_new"
          android:title="@string/action_new"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="101"
          app:showAsAction="never"/>

    <item android:id="@+id/action_privacy"
          android:title="@string/action_privacy"
          android:orderInCategory="102"
          app:showAsAction="never"
        />

    <item android:id="@+id/action_feedback"
          android:title="@string/action_feedback"
          android:orderInCategory="103"
          app:showAsAction="never"
        />

</menu>