<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                tools:context=".SettingsActivity"
                android:background="@color/sharelock_background"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/sharelock_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:id="@+id/sharelock_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharelock_logo_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sharelock_logo_text_size"
            />
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/sharelock_toolbar_subtitle"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/sharelock_toolbar"
        android:layout_above="@+id/sharelock_toolbar_shadow"
        android:gravity="bottom"
        android:text="@string/settings_subtitle"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sharelock_subtitle_text_size"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:background="?attr/colorPrimary"
        />
    <View
        android:id="@+id/sharelock_toolbar_shadow"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/sharelock_compose_container"
        android:background="@drawable/background_header_shadow"
        />
    <RelativeLayout
        android:id="@+id/sharelock_compose_container"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:id="@+id/secret_hint_text"
            style="@style/AppTheme.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/settings_endpoint_url"
            android:layout_marginBottom="@dimen/secret_hint_top_margin"
            android:text="@string/settings_sherlock_url_hint"
            />
        <EditText
            android:id="@+id/settings_endpoint_url"
            android:layout_width="@dimen/settings_endpoint_edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            />
        <Button
            android:id="@+id/settings_default_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/settings_endpoint_url"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/settings_url_reset_button"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/secret_tooltip"
            style="@style/AppTheme.Tooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_endpoint_url"
            android:text="@string/settings_url_endpoint_tooltip"
            android:layout_marginTop="@dimen/secret_input_tooltip_top_margin"
            android:paddingBottom="10dp"
            />
    </RelativeLayout>
</RelativeLayout>
