<RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             tools:context="com.auth0.sharelock.fragment.LinkFragment">

    <TextView
        android:id="@+id/link_secret_hint"
        style="@style/AppTheme.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/link_hint_top_margin"
        android:layout_marginLeft="@dimen/sharelock_left_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/secret_hint"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_data"
        android:layout_alignTop="@id/link_secret_hint"
        android:layout_marginLeft="@dimen/link_secret_hint_icon_left_margin"/>

    <TextView
        android:id="@+id/link_secret_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_secret_hint"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/sharelock_left_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="16sp"
        android:textColor="#000"
        android:maxLines="2"
        />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sharelock_line_separator"
        android:layout_below="@id/link_secret_text"
        android:layout_marginLeft="@dimen/sharelock_left_margin"
        android:layout_marginTop="@dimen/link_line_separator_top_margin"
        />
    
    <TextView
        android:id="@+id/link_share_hint"
        style="@style/AppTheme.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_secret_text"
        android:layout_marginTop="@dimen/link_hint_top_margin"
        android:layout_marginLeft="@dimen/sharelock_left_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/share_hint"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        android:layout_alignTop="@id/link_share_hint"
        android:layout_marginLeft="24dp"
        />

    <com.auth0.sharelock.widget.ShareEditText
        android:id="@+id/link_share_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_share_hint"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/link_share_list_left_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="#000"
        android:maxLines="1"
        android:background="@android:color/transparent"
        android:inputType="none"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sharelock_line_separator"
        android:layout_below="@id/link_share_list"
        android:layout_marginLeft="@dimen/sharelock_left_margin"
        android:layout_marginTop="@dimen/link_line_separator_top_margin"
        />

    <TextView
        android:id="@+id/link_hint"
        style="@style/AppTheme.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_share_list"
        android:layout_marginTop="@dimen/link_hint_top_margin"
        android:layout_marginLeft="@dimen/sharelock_left_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/link_hint"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lock"
        android:layout_alignTop="@id/link_hint"
        android:layout_marginLeft="@dimen/link_hint_icon_left_margin"
        android:layout_marginTop="-2dp"
        />

    <LinearLayout
        android:id="@+id/link_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_hint"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/sharelock_left_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ProgressBar
            android:id="@+id/link_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/link_progress_right_margin"
            style="?android:attr/android:progressBarStyleSmall"
            />

        <TextView
            android:id="@+id/link_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/link_in_progress"
            android:maxLines="1"
            android:textColor="#000"
            />
    </LinearLayout>
    <Button
        android:id="@+id/link_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_button"
        android:layout_below="@+id/link_hint"
        android:layout_alignRight="@+id/link_group"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/link_buttons"
        android:layout_width="@dimen/button_group_width"
        android:layout_height="@dimen/button_group_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal"
        android:visibility="gone"
        >
        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/link_new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/link_new_normal"
            app:fab_colorPressed="@color/link_new_pressed"
            app:fab_colorRipple="@color/link_new_ripple"
            android:src="@drawable/ic_link_new"
            />
        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/link_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:fab_colorNormal="@color/link_share_normal"
            app:fab_colorPressed="@color/link_share_pressed"
            app:fab_colorRipple="@color/link_share_ripple"
            android:src="@drawable/ic_link_share"
            android:layout_margin="16dp"
            />
    </LinearLayout>
</RelativeLayout>
