<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false"
             android:orientation="vertical"
             tools:context="com.auth0.sharelock.AboutActivity"
             android:background="@color/sharelock_orange">

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/about_flexible_space_height"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:background="@android:color/white"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/about_margin_horizontal"
                android:layout_marginRight="@dimen/about_margin_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/container_title"
                android:textColor="@color/about_text"
                android:textSize="@dimen/about_text_size"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="@dimen/about_line_interspace_multiplier"
                android:text="@string/sharelock_about" />
            <TextView
                android:id="@+id/container_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/about_margin_horizontal"
                android:layout_marginRight="@dimen/about_margin_horizontal"
                android:textSize="@dimen/about_container_title_text_size"
                android:textColor="@color/sharelock_orange"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_container_title"
                />
        </RelativeLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <RelativeLayout
        android:id="@+id/about_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">

        <View
            android:id="@+id/about_header_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_header_height"
            android:background="?attr/colorPrimary"
            android:minHeight="@dimen/about_header_height" />

        <LinearLayout
            android:id="@+id/about_header_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_header_height"
            android:minHeight="@dimen/about_header_height"
            android:background="?attr/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/about_margin_horizontal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sharelock_subtitle_text_size"
                android:fontFamily="sans-serif-light"
                />
        </LinearLayout>
        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/about_new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_header_bar"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-28dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            app:fab_colorNormal="@color/about_new_normal"
            app:fab_colorPressed="@color/about_new_pressed"
            android:src="@drawable/ic_about_new"
            />
    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharelock_logo_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sharelock_logo_text_size"
            />
    </android.support.v7.widget.Toolbar>

</FrameLayout>
